--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feliz 21 de septiembre❤️ ❤️</title>
+    <title>Feliz Cumple y 21-22-23 de septiembre❤️ ❤️</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Cormorant+Garamond:wght@400;600;700&display=swap" rel="stylesheet">
@@ -588,7 +588,7 @@
 
     <div class="main-content animation-paused" id="mainContainer">
         
-        <h1 class="main-title">Feliz 21 de septiembre❤️</h1>
+        <h1 class="main-title">Feliz Cumple y 21_22_23 de septiembre❤️</h1>
 
         <div class="sunflower-container">
             <!-- Girasol Izquierdo -->
@@ -633,7 +633,7 @@
                 <h2>Mi Girasol🌻</h2>
                 <p>Hoy no solo celebro la primavera, también celebro la fortuna de tenerte en mi vida. Eres esa persona que convierte los días grises en momentos llenos de luz, tal como un girasol sigue al sol.</p>
     <p>Gracias por tu apoyo incondicional y por ser siempre tú, auténtica y única. Que este nuevo año de vida te regale la misma alegría que tú das a los demás.</p>
-    <p>Te mereces todo lo bonito de este mundo, porque tu amistad es un tesoro que ilumina mi camino. ¡Feliz dia de la primavera y mañana tu cumple wee! 🎂💛</p>
+    <p>Te mereces todo lo bonito de este mundo, porque tu amistad es un tesoro que ilumina mi camino. ¡Feliz dia de la primavera y tu cumple wee! 🎂💛</p>
                 <p>Quiero que este pequeño detalle te recuerde lo increíblemente especial que eres. Que, al igual que este girasol, tu esencia es fuerte, radiante y capaz de traer alegría a todo lo que te rodea. Gracias por ser tú, por tu paciencia, por tu cariño y por cada instante compartido.</p>
                 <img src="https://www.dl.dropboxusercontent.com/scl/fi/01pulh8w6pmr1thbcctxb/flower.png?rlkey=jx0ufhpnrw07hsynrfbitkr6q&st=bzxns3c1" alt="Flor amarilla" class="footer-image">
             </div>
