--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 
     <div class="main-content animation-paused" id="mainContainer">
         
-        <h1 class="main-title">Feliz Cumple y 21_22_23 de septiembre❤️</h1>
+        <h1 class="main-title">Feliz Cumple y 21-22-23 de septiembre❤️</h1>
 
         <div class="sunflower-container">
             <!-- Girasol Izquierdo -->
